Google Arvo Fonts Add

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <title>Jumbotron Template for Bootstrap 3.1.1 Documentation - BootstrapDocs</title>
 
+    <!-- This is Google Arvo Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
