--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">One Milion Lines</a>
+          <a class="navbar-brand" href="#"><img src="images/Top+Logo.jpg" alt="One Milion Lines" title=""One Milion Lines"></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -59,6 +59,7 @@
         <h1>Our goal is to inspire <br>Tallahassee to write 1,000,000<br> lines of code_</h1>
         <p>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by <strong>CODE.org</strong>. Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goal is to write 1,000,000 lines of code_</p>
         <p><a class="btn btn-danger btn-lg" role="button">Learn more &raquo;</a></p>
+        <img src="images\Code.jpg" title="Code.org logo" alt="Code.org">
       </div>
     </div>
 
@@ -66,19 +67,19 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Students</h2>
+          <p>Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and we'll let you know how to get involved. </p>
+          <p><a class="btn btn-default" href="#" role="button">Start Learning &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Educators</h2>
+          <p>Want to bring this initiative to your school or institution? Awesome! Click the button below and we'll make it happen. </p>
+          <p><a class="btn btn-default" href="#" role="button">Join the Initiative &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Sponsers</h2>
+          <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.</p>
+          <p><a class="btn btn-default" href="#" role="button">Give Support &raquo;</a></p>
         </div>
       </div>
 
